@@ -28,8 +28,7 @@ Itaka requires the following programs/libraries.
 
 - GTK 2.10 or higher
 
-3. INSTALLATION:
-
+3. INSTALLATION: 
 Itaka needs to be installed as the root user.
 
 Unpack and install the Itaka tarball using these commands:
@@ -39,6 +38,8 @@ Unpack and install the Itaka tarball using these commands:
 Switch to the newly created directory and type 'make install' as root and the 
 Makefile will copy the files to the correct location in your system. You do not 
 need to configure or compile Itaka as it is written in interpreted Python code.
+
+By default itaka will be installed in /usr/local/, if you want to use another location, add PREFIX=/usr/mylocation before every make command, including unnstall.
 
 To uninstall, once again as root type 'make uninstall'
 
